--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
   "types": [
    "owner"
   ],
-  "twitter": null,
-  "linkedin": null,
+  "twitter": "https://twitter.com/kayarn_",
+  "linkedin": "https://www.linkedin.com/in/arnaud-kayonga-5910a813a/",
   "medium": null,
   "dribbble": null
  }
